[gd_scene load_steps=5 format=3 uid="uid://cgqwhjp4qevvs"]

[ext_resource type="Script" path="res://Scripts/nodes/tile.gd" id="1_u6jbh"]
[ext_resource type="TileSet" uid="uid://vt4m4ue73k06" path="res://Collections/interactive_tiles_tileset.tres" id="2_n4fod"]
[ext_resource type="Script" path="res://Scripts/nodes/tile_info.gd" id="3_qtaqq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8b6f"]
size = Vector2(16, 16)

[node name="tile" type="Area2D" groups=["player_aoi"]]
z_index = 1
collision_layer = 8
collision_mask = 4
script = ExtResource("1_u6jbh")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.535156, 1, 0.814789, 1)

[node name="Tile Sprite" type="TileMap" parent="."]
position = Vector2(-8, 8)
tile_set = ExtResource("2_n4fod")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player_aoi"]]
visible = false
shape = SubResource("RectangleShape2D_l8b6f")

[node name="Tile Info" type="Node2D" parent="."]
script = ExtResource("3_qtaqq")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
